# serializer version: 1
# name: test_entities[button.lg_tv_back-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_back',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Back',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Back',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'back',
    'unique_id': '01JTEST0000000000000000000_back',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_back-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Back',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_back',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Down',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Down',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'down',
    'unique_id': '01JTEST0000000000000000000_down',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Down',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_exit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_exit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Exit',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Exit',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'exit',
    'unique_id': '01JTEST0000000000000000000_exit',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_exit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Exit',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_exit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_guide-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_guide',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Guide',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Guide',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'guide',
    'unique_id': '01JTEST0000000000000000000_guide',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_guide-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Guide',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_guide',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_hdmi_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_hdmi_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'HDMI 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HDMI 1',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hdmi_1',
    'unique_id': '01JTEST0000000000000000000_hdmi_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_hdmi_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV HDMI 1',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_hdmi_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_hdmi_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_hdmi_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'HDMI 2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HDMI 2',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hdmi_2',
    'unique_id': '01JTEST0000000000000000000_hdmi_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_hdmi_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV HDMI 2',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_hdmi_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_hdmi_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_hdmi_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'HDMI 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HDMI 3',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hdmi_3',
    'unique_id': '01JTEST0000000000000000000_hdmi_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_hdmi_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV HDMI 3',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_hdmi_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_hdmi_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_hdmi_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'HDMI 4',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HDMI 4',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hdmi_4',
    'unique_id': '01JTEST0000000000000000000_hdmi_4',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_hdmi_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV HDMI 4',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_hdmi_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_home-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_home',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Home',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Home',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'home',
    'unique_id': '01JTEST0000000000000000000_home',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_home-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Home',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_home',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_info-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_info',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Info',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Info',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'info',
    'unique_id': '01JTEST0000000000000000000_info',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_info-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Info',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_info',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_input-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_input',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Input',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Input',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'input',
    'unique_id': '01JTEST0000000000000000000_input',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_input-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Input',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_input',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Left',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Left',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'left',
    'unique_id': '01JTEST0000000000000000000_left',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Left',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_menu-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_menu',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Menu',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Menu',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'menu',
    'unique_id': '01JTEST0000000000000000000_menu',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_menu-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Menu',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_menu',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_number_0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_number_0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 0',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 0',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_0',
    'unique_id': '01JTEST0000000000000000000_num_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_number_0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Number 0',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_number_0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_number_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_number_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 1',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_1',
    'unique_id': '01JTEST0000000000000000000_num_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_number_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Number 1',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_number_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_number_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_number_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 2',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_2',
    'unique_id': '01JTEST0000000000000000000_num_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_number_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Number 2',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_number_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_number_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_number_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 3',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_3',
    'unique_id': '01JTEST0000000000000000000_num_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_number_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Number 3',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_number_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_number_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_number_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 4',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 4',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_4',
    'unique_id': '01JTEST0000000000000000000_num_4',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_number_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Number 4',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_number_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_number_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_number_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 5',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 5',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_5',
    'unique_id': '01JTEST0000000000000000000_num_5',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_number_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Number 5',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_number_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_number_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_number_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 6',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 6',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_6',
    'unique_id': '01JTEST0000000000000000000_num_6',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_number_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Number 6',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_number_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_number_7-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_number_7',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 7',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 7',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_7',
    'unique_id': '01JTEST0000000000000000000_num_7',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_number_7-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Number 7',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_number_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_number_8-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_number_8',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 8',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 8',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_8',
    'unique_id': '01JTEST0000000000000000000_num_8',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_number_8-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Number 8',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_number_8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_number_9-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_number_9',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 9',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 9',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_9',
    'unique_id': '01JTEST0000000000000000000_num_9',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_number_9-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Number 9',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_number_9',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_ok-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_ok',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'OK',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'OK',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ok',
    'unique_id': '01JTEST0000000000000000000_ok',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_ok-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV OK',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_ok',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_power_off-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_power_off',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Power off',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Power off',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'power_off',
    'unique_id': '01JTEST0000000000000000000_power_off',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_power_off-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Power off',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_power_off',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_power_on-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_power_on',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Power on',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Power on',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'power_on',
    'unique_id': '01JTEST0000000000000000000_power_on',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_power_on-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Power on',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_power_on',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_right-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_right',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Right',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Right',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'right',
    'unique_id': '01JTEST0000000000000000000_right',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_right-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Right',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.lg_tv_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.lg_tv_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Up',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Up',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'up',
    'unique_id': '01JTEST0000000000000000000_up',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.lg_tv_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LG TV Up',
    }),
    'context': <ANY>,
    'entity_id': 'button.lg_tv_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
